--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hayloft-menu",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/VlikToldo/hayloft-menu",
+  "homepage": "hayloft-menu",
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
@@ -20,8 +20,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,8 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
   }
 }
