--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hayloft-menu",
   "version": "0.1.0",
   "private": true,
-  "homepage": "hayloft-menu",
+  "homepage": "https://vliktoldo.github.io/hayloft-menu/",
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^10.12.14",
+    "gh-pages": "^5.0.0",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,7 +25,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
+    "lint:js": "eslint src/**/*.{js,jsx}",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
+
   },
   "eslintConfig": {
     "extends": [
