--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "classnames": "^2.3.2",
+    "formik": "^2.4.5",
     "framer-motion": "^10.12.14",
     "gh-pages": "^5.0.0",
     "modern-normalize": "^2.0.0",
