--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "framer-motion": "^10.12.14",
     "gh-pages": "^5.0.0",
     "modern-normalize": "^2.0.0",
+    "nanoid": "^5.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
