--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.62.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "deploy": "gh-pages -d build",
