--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-virtualized": "^9.22.5",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
     "redux": "^4.2.1",
